--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/ct-jensschulze/JsonMapper",
   "support": {
     "email": "jens.schulze@commercetools.de",
-    "issues": "https://github.com/ct-jensschulze/JsonMapper/issues",
+    "issues": "https://github.com/ct-jensschulze/JsonMapper/issues"
   },
   "autoload": {
     "psr-4": {
@@ -13,7 +13,8 @@
     }
   },
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "pimple/pimple": "^3.0"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.0"
