--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,14 @@
       "Commercetools\\Commons\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Commercetools\\Commons\\": [
+        "tests/unit/",
+        "tests/integration/"
+      ]
+    }
+  },
   "require": {
     "php": ">=5.4",
     "pimple/pimple": "^3.0"
